# lang-interpreter

./: .gitignore  CMakeLists.txt  dummy.lang
include/: context.hpp  expression.hpp  lexer.hpp  value.hpp
include/exception/: interpreter_exception.hpp  runtime_exception.hpp
include/expression/: bool_expression.hpp  equality_expression.hpp  expression.hpp  number_expression.hpp
include/type/: bool.hpp  number.hpp  type.hpp
src/: context.cpp  expression.cpp  lexer.cpp  main.cpp  value.cpp
src/expression/: bool_expression.cpp  equality_expression.cpp  expression.cpp  number_expression.cpp
src/type/: bool.cpp  number.cpp  type.cpp
tests/: CMakeLists.txt  test_bool.cpp  test_context.cpp  test_number.cpp
